[metadata]
name = stripe
version = 1.0.0
author = Paul Belanger
author-email = paul.belanger@polybeacon.com
summary = Automatic call distributor (ACD) using Python and Redis
description-file = README.rst
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Asterisk
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[pbr]
warnerrors = True

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    stripe

[entry_points]
console_scripts =
    stripe-api = stripe.cmd.api:main
    stripe-manage = stripe.cmd.manage:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[nosetests]
cover-package = stripe
cover-html = true
cover-erase = true
verbosity=2
